--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=pitlavamshikrishna1502@gmail.com
-spring.mail.password=nvan qetx tkgo sghr
+spring.mail.password=bget pgng dnyg uxwt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
